--- a/.github/workflows/hello-ci.yml
+++ b/.github/workflows/hello-ci.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Run a greeting
         run: echo "The CI pipeline has successfully started!"
       - name: Run Python Tests
-        run: python3 test_calc.py
+        run: pip install pytest && pytest test_calc.py -v
